<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="mbl"
            type="com.danieloloan.pbp_uts.Mobil" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        tools:context=".RecyclerViewAdapter"
        android:id="@+id/ParentAdapter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:id="@+id/ivFotoProfil"
                    bind:imgURL="@{mbl.imgURL}" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:text="@string/merk"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvMerk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{mbl.merkMobil}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:text="@string/namaMobil"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{mbl.namaMobil}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fuel"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvFuel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{mbl.jenisFuel}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:text="@string/seat"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvSeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{String.valueOf(mbl.jumlahSeat)}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:text="@string/harga"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvHarga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{String.valueOf(mbl.harga)}"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>